# AdrenalineEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cmake_install.cmake  imgui.ini  main.cpp
enc_temp_folder/32c0c72d21d29389a82fa3f046a9245b/: main.cpp
engine/: adrenaline.cpp  adrenaline.h  config.h
engine/discord/: discord.cpp  discord.h
engine/editor/: editor.cpp  editor.h
engine/renderer/: buffers.cpp  buffers.h  camera.cpp  camera.h  debugger.h  debugging.cpp  debugging.h  descriptor.cpp  descriptor.h  devices.cpp  devices.h  display.cpp  display.h  global.h  gui.cpp  gui.h  images.cpp  images.h  info.h  model.cpp  model.h  pipeline.cpp  pipeline.h  processing.cpp  processing.h  renderer.cpp  renderer.h  renderpass.cpp  renderpass.h  swapchain.cpp  swapchain.h  textures.h  tools.h  types.h  window.cpp  window.h
engine/resources/models/: batman.gltf
engine/resources/models/bt/: bt.gltf
engine/resources/models/scientist/: scene.gltf
engine/resources/shaders/: frag.spv  shader.frag  shader.vert  shaders.bat  vert.spv
lib/glfw-3.3.4/: cmake_uninstall.cmake
lib/glfw-3.3.4/src/: glfw3.pc
lib/imgui/: imconfig.h  imgui_impl_glfw.cpp
lib/tinygltf/: examples.bat
